--- a/ganhos2.html
+++ b/ganhos2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minha Equipe - Ganhos</title>
+  <title>Cadastro - HInvest</title>
   <style>
     body {
       background-color: #121212;
@@ -183,7 +183,7 @@
           nome: "Usuário " + meuCodigo,
           investimento: 0,
           codigo: meuCodigo,
-          codigoIndicado: codigoIndicado
+          codigoIndicado: codigoIndicado || null  // Se o código indicado não for encontrado, será null
         };
         await db.ref("usuarios/" + usuarioId).set(novoUsuario);
       }
