--- a/ganhos2.html
+++ b/ganhos2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro - HInvest</title>
+  <title>Minha Equipe - Ganhos</title>
   <style>
     body {
       background-color: #121212;
@@ -12,12 +12,14 @@
       margin: 0;
       padding: 0;
     }
+
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 10px;
     }
+
     .header {
       display: flex;
       justify-content: space-between;
@@ -25,10 +27,12 @@
       width: 100%;
       margin-bottom: 20px;
     }
+
     .profile span {
       font-size: 18px;
       font-weight: bold;
     }
+
     .details-btn {
       background-color: #8A2BE2;
       color: white;
@@ -37,36 +41,42 @@
       border-radius: 5px;
       cursor: pointer;
     }
+
     .team-section, .invite-section {
       width: 100%;
       margin-bottom: 20px;
     }
+
     .team-level, .invite-code, .invite-link {
       background-color: #1e1e1e;
       margin: 10px 0;
       padding: 15px;
       border-radius: 8px;
     }
+
     .copy-btn {
       background-color: #8A2BE2;
       color: white;
-      padding: 6px 10px;
+      padding: 8px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      font-size: 14px;
+      margin-top: 5px;
     }
+
     .footer {
       display: flex;
       flex-direction: column;
       align-items: center;
       margin-top: 20px;
     }
+
     .bonus-info {
       font-size: 14px;
       margin-top: 10px;
       text-align: center;
     }
+
     .invited-list {
       background-color: #1e1e1e;
       padding: 10px;
@@ -76,6 +86,7 @@
     }
   </style>
 
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 </head>
@@ -99,19 +110,15 @@
 
     <section class="invite-section">
       <div class="invite-code">
-        <span>Código de convite</span><br>
-        <div style="display: flex; align-items: center; gap: 10px;">
-          <p id="invite-code" style="margin: 0;">Carregando...</p>
-          <button class="copy-btn" onclick="copyText('invite-code')">Copiar</button>
-        </div>
+        <span>Código de convite</span>
+        <p id="invite-code">Carregando...</p>
+        <button class="copy-btn" onclick="copyText('invite-code')">Cópia</button>
       </div>
 
       <div class="invite-link">
-        <span>Link de convite</span><br>
-        <div style="display: flex; align-items: center; gap: 10px;">
-          <p id="invite-link" style="margin: 0;">Carregando...</p>
-          <button class="copy-btn" onclick="copyText('invite-link')">Copiar</button>
-        </div>
+        <span>Link de convite</span>
+        <p id="invite-link">Carregando...</p>
+        <button class="copy-btn" onclick="copyText('invite-link')">Cópia</button>
       </div>
 
       <div class="invited-list">
@@ -130,7 +137,7 @@
   </div>
 
   <script>
-    // Firebase config
+    // Configuração Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyCKSKnVC8dNWmiMrNr1j4rMLfQTlOrqzVM",
       authDomain: "hinvest-f4354.firebaseapp.com",
@@ -140,9 +147,11 @@
       messagingSenderId: "646397677016",
       appId: "1:646397677016:web:f05ca27a38439568bff6ad"
     };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
 
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
+    // Função para copiar texto
     function copyText(id) {
       const text = document.getElementById(id).textContent;
       navigator.clipboard.writeText(text).then(() => {
@@ -150,73 +159,37 @@
       });
     }
 
-    function getCodigoIndicado() {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get('codigo');
-    }
+    // CÓDIGO DE CONVITE FIXO DO USUÁRIO PRINCIPAL
+    const meuCodigo = "1";
+    const meuLink = `https://hinvest.site/?codigo=${meuCodigo}`;
 
-    async function gerarCodigoNovo() {
-      const snapshot = await db.ref("usuarios").once("value");
-      return snapshot.numChildren() + 1;
-    }
+    // Exibir código e link
+    document.getElementById("invite-code").textContent = meuCodigo;
+    document.getElementById("invite-link").textContent = meuLink;
 
-    async function iniciarSistema() {
-      let usuarioId = localStorage.getItem("usuarioId");
-      let meuCodigo;
-      let codigoIndicado = getCodigoIndicado(); // agora pega diretamente da URL
+    // Carregar convidados (afiliados)
+    database.ref("usuarios").orderByChild("codigoIndicado").equalTo(meuCodigo).once("value", snapshot => {
+      let totalBonus = 0;
+      let totalUsers = 0;
+      const list = document.getElementById("invited-users");
+      list.innerHTML = "";
 
-      if (usuarioId) {
-        const snapshot = await db.ref("usuarios/" + usuarioId).once("value");
-        if (snapshot.exists()) {
-          meuCodigo = snapshot.val().codigo;
-        } else {
-          usuarioId = null;
-        }
-      }
+      snapshot.forEach(child => {
+        const nome = child.val().nome;
+        const investimento = parseFloat(child.val().investimento || 0);
+        const bonus = investimento * 0.35;
+        totalBonus += bonus;
+        totalUsers++;
 
-      if (!usuarioId) {
-        meuCodigo = await gerarCodigoNovo();
-        usuarioId = "usuario_" + meuCodigo;
-        localStorage.setItem("usuarioId", usuarioId);
-
-        const novoUsuario = {
-          nome: "Usuário " + meuCodigo,
-          investimento: 0,
-          codigo: meuCodigo,
-          codigoIndicado: codigoIndicado || null  // Se o código indicado não for encontrado, será null
-        };
-        await db.ref("usuarios/" + usuarioId).set(novoUsuario);
-      }
-
-      const linkConvite = `https://inves13.github.io/hivest-codigo-2?codigo=${meuCodigo}`;
-      document.getElementById("invite-code").textContent = meuCodigo;
-      document.getElementById("invite-link").textContent = linkConvite;
-
-      db.ref("usuarios").orderByChild("codigoIndicado").equalTo(String(meuCodigo)).once("value", snapshot => {
-        let totalBonus = 0;
-        let totalUsers = 0;
-        const list = document.getElementById("invited-users");
-        list.innerHTML = "";
-
-        snapshot.forEach(child => {
-          const nome = child.val().nome;
-          const investimento = parseFloat(child.val().investimento || 0);
-          const bonus = investimento * 0.35;
-          totalBonus += bonus;
-          totalUsers++;
-
-          const li = document.createElement("li");
-          li.textContent = `${nome} - Investiu R$ ${investimento.toFixed(2)} - Você ganhou R$ ${bonus.toFixed(2)}`;
-          list.appendChild(li);
-        });
-
-        document.getElementById("lv1-bonus").textContent = `R$ ${totalBonus.toFixed(2)} Bônus`;
-        document.getElementById("total-bonus").textContent = `R$ ${totalBonus.toFixed(2)} ganhos totais`;
-        document.getElementById("total-users").textContent = `${totalUsers} usuários convidados`;
+        const li = document.createElement("li");
+        li.textContent = `${nome} - Investiu R$ ${investimento.toFixed(2)} - Você ganhou R$ ${bonus.toFixed(2)}`;
+        list.appendChild(li);
       });
-    }
 
-    iniciarSistema();
+      document.getElementById("lv1-bonus").textContent = `R$ ${totalBonus.toFixed(2)} Bônus`;
+      document.getElementById("total-bonus").textContent = `R$ ${totalBonus.toFixed(2)} ganhos totais`;
+      document.getElementById("total-users").textContent = `${totalUsers} usuários convidados`;
+    });
   </script>
 </body>
 </html>
