--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>H Invest - Acesso</title>
+  <title>H Invest - Cadastro</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -47,9 +47,11 @@
       font-size: 18px;
       font-weight: bold;
       color: #00ff99;
+      white-space: pre-wrap;
     }
   </style>
 
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
@@ -76,6 +78,7 @@
   </div>
 
   <script>
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyCKSKnVC8dNWmiMrNr1j4rMLfQTlOrqzVM",
       authDomain: "hinvest-f4354.firebaseapp.com",
@@ -89,10 +92,9 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // Verifica código de indicação na URL
+    // Pega código da URL
     const urlParams = new URLSearchParams(window.location.search);
     const codigoIndicado = urlParams.get("codigo");
-
     if (codigoIndicado) {
       document.getElementById("cadastro-codigo").value = codigoIndicado;
     }
@@ -107,33 +109,31 @@
 
       db.ref("usuarios/" + telefone).once("value").then(snapshot => {
         if (snapshot.exists()) {
-          alert("Já existe uma conta cadastrada com esse número de telefone.");
+          alert("Já existe uma conta com esse telefone.");
         } else {
           db.ref("usuarios").once("value").then(snapshot => {
             const total = snapshot.numChildren() + 1;
             const meuCodigo = total;
 
             db.ref("usuarios/" + telefone).set({
-              nome: nome,
-              senha: senha,
+              nome,
+              senha,
               saldo: 20,
               renda: 0,
               recebimento: 0,
               ultimoCheckin: "",
-              codigoIndicacao: codigoIndicacao,
+              codigoIndicacao,
               codigo: meuCodigo,
               timestamp: Date.now()
             }).then(() => {
-              document.getElementById("codigo-gerado").innerText = 
+              document.getElementById("codigo-gerado").innerText =
                 "Seu código de indicação: " + meuCodigo + 
-                "\nCompartilhe este link: https://inves13.github.io/hivest-codigo-1?codigo=" + meuCodigo;
+                "\nCompartilhe este link:\nhttps://inves13.github.io/hivest-codigo-1?codigo=" + meuCodigo;
 
               localStorage.setItem("telefoneLogado", telefone);
               setTimeout(() => {
                 window.location.href = "H.html";
-              }, 4000); // redireciona após 4 segundos
-            }).catch((error) => {
-              alert("Erro ao cadastrar: " + error.message);
+              }, 4000);
             });
           });
         }
@@ -147,8 +147,8 @@
       const senha = document.getElementById("login-senha").value;
 
       db.ref("usuarios/" + telefone).once("value").then(snapshot => {
-        const data = snapshot.val();
-        if (data && data.senha === senha) {
+        const user = snapshot.val();
+        if (user && user.senha === senha) {
           localStorage.setItem("telefoneLogado", telefone);
           window.location.href = "H.html";
         } else {
