--- a/ganhos2.html
+++ b/ganhos2.html
@@ -1,88 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minha Equipe - Ganhos</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Minha Equipe</title>
   <style>
     body {
-      background-color: #121212;
-      color: white;
+      background-color: #000;
+      color: #fff;
       font-family: Arial, sans-serif;
+      padding: 20px;
       margin: 0;
-      padding: 0;
     }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px;
-    }
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
+    h1 {
+      text-align: center;
       margin-bottom: 20px;
     }
-
-    .profile span {
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .details-btn {
-      background-color: #8A2BE2;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .team-section, .invite-section {
-      width: 100%;
-      margin-bottom: 20px;
-    }
-
-    .team-level, .invite-code, .invite-link {
-      background-color: #1e1e1e;
-      margin: 10px 0;
+    .user-card {
+      background-color: #1c1c1c;
       padding: 15px;
-      border-radius: 8px;
+      border-radius: 10px;
+      margin-bottom: 15px;
     }
-
-    .copy-btn {
-      background-color: #8A2BE2;
-      color: white;
-      padding: 8px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 5px;
+    .user-card p {
+      margin: 5px 0;
     }
-
-    .footer {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    .total {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 16px;
+    }
+    .voltar {
       margin-top: 20px;
-    }
-
-    .bonus-info {
-      font-size: 14px;
-      margin-top: 10px;
       text-align: center;
     }
-
-    .invited-list {
-      background-color: #1e1e1e;
-      padding: 10px;
-      border-radius: 8px;
-      margin-top: 10px;
-      width: 100%;
+    .voltar a {
+      color: #8A2BE2;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 
@@ -91,53 +46,20 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <div class="profile">
-        <span>Minha equipe</span>
-      </div>
-      <button class="details-btn" onclick="window.location.href='equipe.html'">Detalhes da equipe</button>
-    </div>
+  <h1>Equipe Convidada</h1>
+  <div id="user-list"></div>
 
-    <section class="team-section">
-      <div class="team-level">
-        <div class="level">LV1</div>
-        <div class="tax">35% Taxa de comissão</div>
-        <div class="bonus" id="lv1-bonus">R$ 0,00 Bônus</div>
-        <div class="status">Usuário válido</div>
-      </div>
-    </section>
+  <div class="total">
+    <p><strong>Total de usuários convidados:</strong> <span id="total-users">0</span></p>
+    <p><strong>Total em bônus:</strong> R$ <span id="total-bonus">0.00</span></p>
+  </div>
 
-    <section class="invite-section">
-      <div class="invite-code">
-        <span>Código de convite</span>
-        <p id="invite-code">Carregando...</p>
-        <button class="copy-btn" onclick="copyText('invite-code')">Cópia</button>
-      </div>
-
-      <div class="invite-link">
-        <span>Link de convite</span>
-        <p id="invite-link">Carregando...</p>
-        <button class="copy-btn" onclick="copyText('invite-link')">Cópia</button>
-      </div>
-
-      <div class="invited-list">
-        <strong>Usuários convidados:</strong>
-        <ul id="invited-users" style="padding-left: 20px;"></ul>
-      </div>
-    </section>
-
-    <footer class="footer">
-      <span id="total-users">0 usuários convidados</span>
-      <span id="total-bonus">R$ 0,00 ganhos totais</span>
-      <div class="bonus-info">
-        <p>Bônus de convite: Quando um amigo se registra e investe, você recebe 35% do valor investido.</p>
-      </div>
-    </footer>
+  <div class="voltar">
+    <a href="H.html">← Voltar</a>
   </div>
 
   <script>
-    // Configuração Firebase
+    const meuCodigo = "1"; // código de convite
     const firebaseConfig = {
       apiKey: "AIzaSyCKSKnVC8dNWmiMrNr1j4rMLfQTlOrqzVM",
       authDomain: "hinvest-f4354.firebaseapp.com",
@@ -149,46 +71,38 @@
     };
 
     firebase.initializeApp(firebaseConfig);
-    const database = firebase.database();
+    const db = firebase.database();
 
-    // Função para copiar texto
-    function copyText(id) {
-      const text = document.getElementById(id).textContent;
-      navigator.clipboard.writeText(text).then(() => {
-        alert("Copiado!");
-      });
-    }
+    let totalBonus = 0;
+    let totalUsers = 0;
 
-    // CÓDIGO DE CONVITE FIXO DO USUÁRIO PRINCIPAL
-    const meuCodigo = "1";
-    const meuLink = `https://hinvest.site/?codigo=${meuCodigo}`;
-
-    // Exibir código e link
-    document.getElementById("invite-code").textContent = meuCodigo;
-    document.getElementById("invite-link").textContent = meuLink;
-
-    // Carregar convidados (afiliados)
-    database.ref("usuarios").orderByChild("codigoIndicado").equalTo(meuCodigo).once("value", snapshot => {
-      let totalBonus = 0;
-      let totalUsers = 0;
-      const list = document.getElementById("invited-users");
-      list.innerHTML = "";
+    db.ref("usuarios").orderByChild("codigoIndicado").equalTo(meuCodigo).once("value", snapshot => {
+      const userList = document.getElementById("user-list");
+      userList.innerHTML = "";
 
       snapshot.forEach(child => {
-        const nome = child.val().nome;
-        const investimento = parseFloat(child.val().investimento || 0);
+        const data = child.val();
+        const nome = data.nome || "Sem nome";
+        const telefone = data.telefone || "Sem telefone";
+        const investimento = parseFloat(data.investimento || 0);
         const bonus = investimento * 0.35;
-        totalBonus += bonus;
-        totalUsers++;
 
-        const li = document.createElement("li");
-        li.textContent = `${nome} - Investiu R$ ${investimento.toFixed(2)} - Você ganhou R$ ${bonus.toFixed(2)}`;
-        list.appendChild(li);
+        totalUsers++;
+        totalBonus += bonus;
+
+        const div = document.createElement("div");
+        div.className = "user-card";
+        div.innerHTML = `
+          <p><strong>Nome:</strong> ${nome}</p>
+          <p><strong>Telefone:</strong> ${telefone}</p>
+          <p><strong>Investimento:</strong> R$ ${investimento.toFixed(2)}</p>
+          <p><strong>Seu bônus:</strong> R$ ${bonus.toFixed(2)}</p>
+        `;
+        userList.appendChild(div);
       });
 
-      document.getElementById("lv1-bonus").textContent = `R$ ${totalBonus.toFixed(2)} Bônus`;
-      document.getElementById("total-bonus").textContent = `R$ ${totalBonus.toFixed(2)} ganhos totais`;
-      document.getElementById("total-users").textContent = `${totalUsers} usuários convidados`;
+      document.getElementById("total-users").textContent = totalUsers;
+      document.getElementById("total-bonus").textContent = totalBonus.toFixed(2);
     });
   </script>
 </body>
