--- a/ganhos2.html
+++ b/ganhos2.html
@@ -3,41 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Minha Equipe</title>
+  <title>Minha Equipe - Ganhos</title>
   <style>
     body {
-      background-color: #000;
-      color: #fff;
+      background-color: #121212;
+      color: white;
       font-family: Arial, sans-serif;
-      padding: 20px;
       margin: 0;
+      padding: 0;
     }
-    h1 {
-      text-align: center;
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px;
+    }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
       margin-bottom: 20px;
     }
-    .user-card {
-      background-color: #1c1c1c;
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 15px;
-    }
-    .user-card p {
-      margin: 5px 0;
-    }
-    .total {
-      margin-top: 30px;
-      text-align: center;
-      font-size: 16px;
-    }
-    .voltar {
-      margin-top: 20px;
-      text-align: center;
-    }
-    .voltar a {
-      color: #8A2BE2;
-      text-decoration: none;
+    .profile span {
+      font-size: 18px;
       font-weight: bold;
+    }
+    .details-btn {
+      background-color: #8A2BE2;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .team-section, .invite-section {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+    .team-level, .invite-code, .invite-link {
+      background-color: #1e1e1e;
+      margin: 10px 0;
+      padding: 15px;
+      border-radius: 8px;
+    }
+    .copy-btn {
+      background-color: #8A2BE2;
+      color: white;
+      padding: 8px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 5px;
+    }
+    .footer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+    }
+    .bonus-info {
+      font-size: 14px;
+      margin-top: 10px;
+      text-align: center;
+    }
+    .invited-list {
+      background-color: #1e1e1e;
+      padding: 10px;
+      border-radius: 8px;
+      margin-top: 10px;
+      width: 100%;
     }
   </style>
 
@@ -46,20 +81,53 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 </head>
 <body>
-  <h1>Equipe Convidada</h1>
-  <div id="user-list"></div>
+  <div class="container">
+    <div class="header">
+      <div class="profile">
+        <span>Minha equipe</span>
+      </div>
+      <button class="details-btn" onclick="window.location.href='equipe.html'">Detalhes da equipe</button>
+    </div>
 
-  <div class="total">
-    <p><strong>Total de usuários convidados:</strong> <span id="total-users">0</span></p>
-    <p><strong>Total em bônus:</strong> R$ <span id="total-bonus">0.00</span></p>
-  </div>
+    <section class="team-section">
+      <div class="team-level">
+        <div class="level">LV1</div>
+        <div class="tax">35% Taxa de comissão</div>
+        <div class="bonus" id="lv1-bonus">R$ 0,00 Bônus</div>
+        <div class="status">Usuário válido</div>
+      </div>
+    </section>
 
-  <div class="voltar">
-    <a href="H.html">← Voltar</a>
+    <section class="invite-section">
+      <div class="invite-code">
+        <span>Código de convite</span>
+        <p id="invite-code">Carregando...</p>
+        <button class="copy-btn" onclick="copyText('invite-code')">Cópia</button>
+      </div>
+
+      <div class="invite-link">
+        <span>Link de convite</span>
+        <p id="invite-link">Carregando...</p>
+        <button class="copy-btn" onclick="copyText('invite-link')">Cópia</button>
+      </div>
+
+      <div class="invited-list">
+        <strong>Usuários convidados:</strong>
+        <ul id="invited-users" style="padding-left: 20px;"></ul>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <span id="total-users">0 usuários convidados</span>
+      <span id="total-bonus">R$ 0,00 ganhos totais</span>
+      <div class="bonus-info">
+        <p>Bônus de convite: Quando um amigo se registra e investe, você recebe 35% do valor investido.</p>
+      </div>
+    </footer>
   </div>
 
   <script>
-    const meuCodigo = "1"; // código de convite
+    // Configuração do Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyCKSKnVC8dNWmiMrNr1j4rMLfQTlOrqzVM",
       authDomain: "hinvest-f4354.firebaseapp.com",
@@ -71,38 +139,46 @@
     };
 
     firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+    const database = firebase.database();
 
-    let totalBonus = 0;
-    let totalUsers = 0;
+    // Função para copiar
+    function copyText(id) {
+      const text = document.getElementById(id).textContent;
+      navigator.clipboard.writeText(text).then(() => {
+        alert("Copiado!");
+      });
+    }
 
-    db.ref("usuarios").orderByChild("codigoIndicado").equalTo(meuCodigo).once("value", snapshot => {
-      const userList = document.getElementById("user-list");
-      userList.innerHTML = "";
+    // Código e link de convite
+    const meuCodigo = "1";
+    const meuLink = `https://inves13.github.io/hivest-codigo-1/?codigo=${meuCodigo}`;
+
+    // Exibir dados no HTML
+    document.getElementById("invite-code").textContent = meuCodigo;
+    document.getElementById("invite-link").textContent = meuLink;
+
+    // Buscar usuários convidados
+    database.ref("usuarios").orderByChild("codigoIndicado").equalTo(meuCodigo).once("value", snapshot => {
+      let totalBonus = 0;
+      let totalUsers = 0;
+      const list = document.getElementById("invited-users");
+      list.innerHTML = "";
 
       snapshot.forEach(child => {
-        const data = child.val();
-        const nome = data.nome || "Sem nome";
-        const telefone = data.telefone || "Sem telefone";
-        const investimento = parseFloat(data.investimento || 0);
+        const nome = child.val().nome;
+        const investimento = parseFloat(child.val().investimento || 0);
         const bonus = investimento * 0.35;
-
-        totalUsers++;
         totalBonus += bonus;
+        totalUsers++;
 
-        const div = document.createElement("div");
-        div.className = "user-card";
-        div.innerHTML = `
-          <p><strong>Nome:</strong> ${nome}</p>
-          <p><strong>Telefone:</strong> ${telefone}</p>
-          <p><strong>Investimento:</strong> R$ ${investimento.toFixed(2)}</p>
-          <p><strong>Seu bônus:</strong> R$ ${bonus.toFixed(2)}</p>
-        `;
-        userList.appendChild(div);
+        const li = document.createElement("li");
+        li.textContent = `${nome} - Investiu R$ ${investimento.toFixed(2)} - Você ganhou R$ ${bonus.toFixed(2)}`;
+        list.appendChild(li);
       });
 
-      document.getElementById("total-users").textContent = totalUsers;
-      document.getElementById("total-bonus").textContent = totalBonus.toFixed(2);
+      document.getElementById("lv1-bonus").textContent = `R$ ${totalBonus.toFixed(2)} Bônus`;
+      document.getElementById("total-bonus").textContent = `R$ ${totalBonus.toFixed(2)} ganhos totais`;
+      document.getElementById("total-users").textContent = `${totalUsers} usuários convidados`;
     });
   </script>
 </body>
