--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             }).then(() => {
               document.getElementById("codigo-gerado").innerText =
                 "Seu código de indicação: " + meuCodigo + 
-                "\nCompartilhe este link:\nhttps://inves13.github.io/hivest-codigo-1?codigo=" + meuCodigo;
+                "\nCompartilhe este link:\nhttps://inves13.github.io/hivest-codigo-1/?codigo=" + meuCodigo;
 
               localStorage.setItem("telefoneLogado", telefone);
               setTimeout(() => {
